<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="msg_quit_detail">Resetting your application will erase all your basic user profile and device information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="msg_quit_title">Reset</string>
    <string name="app_name">VitalSens</string>
    <string name="hello_world"></string>
    <string name="dcon">Device Connection Status</string>
    <string name="action_settings">Settings</string>
    <string name="pname">Name</string>
    <string name="page">Age</string>
    <string name="psex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pdiesepro">Disease Profile</string>
	<string name="pdocname">Doctor Name</string>
	<string name="pdocno">Doctor Phone Number</string>
	<string name="signin">Sign In</string>
	<string name="reset">Reset</string>
	<string name="tempcheck">Temperature Check</string>
    <string name="scan_for_device">Scan</string>
    <string name="heartrate">Heart Rate</string>
    <string name="spo">Spo2</string>
    <string name="acc">Accelerometer</string>
    <string name="temp">Temperature</string>
    <string name="heart72">72</string>
    <string name="spo100">100</string>
    <string name="acc00">0</string>
    <string name="temp30">30</string>
    <string name="datasyn">Sync Interval</string>
    <string name="set">Set</string>
    <string name="change">Change</string>
    <string name="patname">Patient Name</string>
    <string name="patage">Patient Age</string>
    <string name="heading">Recommanded Settings For Your Age </string>
    <string name="push_settings">Push</string>
    <string name="bcheck">Battery Check</string>
    <string name="bclose">Close</string>
    <string name="hgraph">Heart Graph</string>
    <string name="sgraph">Spo2 Graph</string>
    <string name="agraph">Acc Graph</string>
    <string name="tgraph">Temperature Graph</string>
    <string name="date">Select Date</string>
    <string name="go">Go</string>
    <string name="Batterycheck">Battery Level of Device</string>
    <string name="syn_settings">Sync Settings</string>
    <string name="syn_freq_in_min">Sync Interval in Minutes</string>
    <string name="meas_freq_in_min">Measurement Interval in Minutes</string>
    <string name="no_of_meas_per_day">Number of measurements per day</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="veiw_file">View File Data</string>
    <string name="delete_file">Delete File</string>
    <string name="rtemp">TEMP</string>
    <string name="rheart">HR</string>
    <string name="rspo">SPO2</string>
</resources>
